Fix some contrast to be compliant with RGA

--- a/src/app/pages/report/company/company.component.scss
+++ b/src/app/pages/report/company/company.component.scss
@@ -15,6 +15,10 @@ section {
     background-color: $light-green;
     border-radius: $theme-border-more-radius;
 
+    .text-primary {
+      color: $secondary !important;
+    }
+
     label, h2 {
       color: $black;
     }
