--- a/src/theme/form.scss
+++ b/src/theme/form.scss
@@ -102,12 +102,12 @@ input[type=radio]::before {
 
 input[type=radio]:checked {
   background-color: #fff;
-  border-color: $primary;
+  border-color: $secondary;
   opacity: 1;
 }
 
 input[type=radio]:checked::before {
-  background-color: $primary;
+  background-color: $secondary;
   -webkit-transform: scale(1);
   transform: scale(1);
   -webkit-transition: -webkit-transform 0.2s ease-out;
@@ -131,8 +131,8 @@ input[type="checkbox"] + .label-inline {
 }
 
 input[type="checkbox"]:checked {
-  background-color: $primary;
-  border-color: $primary;
+  background-color: $secondary;
+  border-color: $secondary;
   opacity: 1;
   -webkit-transition: border-color 0.2s ease-in, background-color 0.2s ease-out;
   transition: border-color 0.2s ease-in, background-color 0.2s ease-out;
