--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,4 +1,4 @@
-$blue: #407e9a;
+$blue: #407e99;
 $light-blue: #2A8194;
 $dark-blue: #1f2b50;
 $lighter-blue: #D6F0FF;
@@ -12,7 +12,7 @@ $dark-grey: #8393a7;
 $darker-grey: #53657d;
 $almost-black: #26353f;
 $black: #1c1c1c;
-$green: #018741;
+$green: #017741;
 $light-green: #daf5e7;
 $orange: #E89024;
 $light-orange: #fec79b;
